--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "gatsby-starter-chronoblog",
   "keywords": [],
   "license": "MIT",
-  "author": "Ivan Ganev <ganevio92@gmail.com>",
+  "author": "Saurav Singh",
   "scripts": {
     "build": "gatsby build",
     "clean": "gatsby clean",
