--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "gatsby": "^2.23.3",
+    "gatsby-cli": "^4.11.1",
     "gatsby-plugin-disqus": "^1.2.2",
     "gatsby-plugin-google-analytics": "^2.1.23",
     "gatsby-plugin-manifest": "^2.4.11",
